src/styles/base.scss
* {
  box-sizing: border-box;
  font-family: var(--font-text);
  font-size: 16px;
  // Debug
  // outline: 1px solid blue !important;
}

body {
  background-color: var(--color-grey-100);
  color: var(--color-slate-800);
  font-size: var(--font-base);
  margin: 0;
}

a {
  color: var(--color-grey-700);
  text-decoration: none;
}

ul {
  padding: 0;
}

li {
  list-style: none;
}

button {
  all: unset;
  cursor: pointer;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-title);
  margin: 0;
  padding: 0;
}
h1 {
  font-size: 1.7rem;
}
h2 {
  font-size: 1.2rem;
}
h4 {
  font-size: 0.8rem;
}

// Widths
.w-10 {
  width: 10%;
}
.w-20 {
  width: 20%;
}
.w-30 {
  width: 30%;
}
.w-40 {
  width: 40%;
}
.w-50 {
  width: 50%;
}
.w-60 {
  width: 60%;
}
.w-70 {
  width: 70%;
}
.w-80 {
  width: 80%;
}
.w-90 {
  width: 90%;
}
.w-100 {
  width: 100%;
}

@media screen and (max-width: 800px) {
  main {
    margin-top: 4rem;
  }
}

// ScrollBar

/* width */
::-webkit-scrollbar {
  width: 7px;
  height: 7px;
}
/* Track */
::-webkit-scrollbar-track {
  background: white;
}
/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--color-primary-900);
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--color-primary-700);
}

::selection {
  background-color: var(--color-black);
  color: var(--color-white);
}

// Tags

.tag {
  border-radius: var(--rounded-full);
  line-height: 15px;
  margin: 0;
  white-space: nowrap;
  width: fit-content;

  &--primary {
    font-weight: 600;
    padding: 0.15rem 1rem 0.1rem;
    border: 1px solid var(--color-primary-700);
    background-color: var(--color-primary-50);
    color: var(--color-primary-500);
    font-size: var(--font-m);
  }
  &--green {
    border: 1px solid var(--color-green-400);
    background-color: var(--color-green-200);
    color: var(--color-green-500);
    font-size: var(--font-xs);
    padding: 0rem 0.7rem;
  }
  &--red {
    border: 1px solid var(--color-red-400);
    background-color: var(--color-red-50);
    color: var(--color-red-700);
    font-size: var(--font-xs);
    padding: 0rem 0.7rem;
  }
  &--warning {
    border: 1px solid var(--color-orange-500);
    background-color: var(--color-orange-50);
    color: var(--color-orange-700);
    font-size: var(--font-xs);
    padding: 0rem 0.7rem;
  }
  &--info {
    border: 1px solid var(--color-slate-400);
    background-color: var(--color-slate-200);
    color: var(--color-slate-700);
    font-size: var(--font-s);
    padding: 0rem 0.7rem;
  }
}

// Antd
.ant-message-custom-content {
  display: flex;
  justify-items: center;
  gap: 0.5rem;
}

